<resources>
    <string name="app_name">UUKotlinBluetooth</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="scan">Scan</string>
    <string name="stop">Stop</string>


    <string name="permissions" formatted="false">Permissions</string>
    <string name="request_permission" formatted="false">Request</string>
    <string name="app_settings" formatted="false">App Settings</string>
    <string name="location_permission_request_message" formatted="false">In order to use Bluetooth to scan for BLE peripherals, the application needs permission to access the phone\'s location.  Tap \'Request\' below, and then tap Allow on the next dialog.</string>
    <string name="location_permission_denied_message" formatted="false">In order to use Bluetooth to interact with BLE peripherals, the application needs permission to access the phone\'s location. Tap \'App Settings\' below, and then enable location permissions for the app.</string>
    <string name="bluetooth_permission_request_message" formatted="false">In order to use Bluetooth to scan for BLE peripherals, the application needs permission to access Bluetooth.  Tap \'Request\' below, and then tap Allow on the next dialog.</string>
    <string name="bluetooth_permission_denied_message" formatted="false">In order to use Bluetooth to interact with BLE peripherals, the application needs permission to access Bluetooth. Tap \'App Settings\' below, and then enable bluetooth permissions for the app.</string>


    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="discover_services">Discover Services</string>
    <string name="uuid_label">UUID:</string>
    <string name="name_label">Name:</string>
    <string name="type_label">Type:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="primary">Primary</string>
    <string name="secondary">Secondary</string>
    <string name="info">Info</string>
    <string name="services">Services</string>
    <string name="characteristics">Characteristics</string>
    <string name="address_label">Address:</string>
    <string name="state_label">State:</string>
    <string name="rssi_label">RSSI:</string>
    <string name="properties_label">Properties:</string>
    <string name="is_notifying_label">Is Notifying:</string>
    <string name="data_label">Data:</string>
    <string name="read_data">Read Data</string>
    <string name="write_data">Write Data</string>
    <string name="write_data_wwor">WWOR</string>
    <string name="toggle_notify">Toggle Notify</string>
    <string name="hex">hex</string>
    <string name="utf8">utf8</string>
    <string name="mtu_size_label">MTU Size:</string>

    <string name="listen">Listen</string>
    <string name="advertise">Advertise</string>
    <string name="ping">Ping</string>
    <string name="open_l2cap_server">Start L2Cap Server</string>
    <string name="open_l2cap_client">Start L2Cap Client</string>
    <string name="connect_l2cap">Connect L2Cap Channel</string>
    <string name="disconnect_l2cap">Disconnect L2Cap Channel</string>
    <string name="connect_gatt">Connect GATT</string>
    <string name="disconnect_gatt">Disconnect GATT</string>
    <string name="read">Read</string>
    <string name="write">Write</string>

</resources>