<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.silverpine.uu.sample.bluetooth.viewmodel.CharacteristicViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        tools:background="@color/white">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/uuidLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/uuid_label"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/uuidValue"
            app:layout_constraintBottom_toTopOf="@+id/nameLabel" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/uuidValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:text="@{ vm.uuid }"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/uuidLabel"
            app:layout_constraintStart_toEndOf="@+id/uuidLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/nameValue"
            tools:text="0000-0000-0000-0000-0000"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/nameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/name_label"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintTop_toBottomOf="@+id/uuidLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/nameValue"
            app:layout_constraintBottom_toTopOf="@+id/propertiesLabel" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/nameValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:text="@{ vm.name }"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintTop_toBottomOf="@+id/uuidValue"
            app:layout_constraintStart_toEndOf="@+id/nameLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/propertiesValue"
            app:layout_constraintBaseline_toBaselineOf="@+id/nameLabel"
            tools:text="-127"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/propertiesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/properties_label"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintTop_toBottomOf="@+id/nameLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/propertiesValue"
            app:layout_constraintBottom_toTopOf="@+id/isNotifyingLabel" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/propertiesValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:text="@{ vm.properties }"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintTop_toBottomOf="@+id/nameValue"
            app:layout_constraintStart_toEndOf="@+id/propertiesLabel"
            app:layout_constraintBottom_toTopOf="@+id/isNotifyingValue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/propertiesLabel"
            tools:text="Read, Write, Notify"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/isNotifyingLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/is_notifying_label"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintTop_toBottomOf="@+id/propertiesLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/isNotifyingValue"
            app:layout_constraintBottom_toTopOf="@+id/dataLabel" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/isNotifyingValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:text="@{ vm.isNotifying }"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintTop_toBottomOf="@+id/propertiesValue"
            app:layout_constraintStart_toEndOf="@+id/isNotifyingLabel"
            app:layout_constraintBottom_toTopOf="@+id/dataLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/isNotifyingLabel"
            tools:text="No"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dataLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/data_label"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            app:layout_constraintTop_toBottomOf="@+id/isNotifyingLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/hexButton"
            app:layout_constraintBottom_toTopOf="@+id/dataBox" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/hexButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hex"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/choice_button_background_states"
            android:textColor="@color/black"
            app:selected="@{vm.hexSelected}"
            android:onClick="@{ () -> vm.toggleHex(true) }"
            app:layout_constraintBaseline_toBaselineOf="@+id/dataLabel"
            app:layout_constraintStart_toEndOf="@+id/dataLabel"
            app:layout_constraintEnd_toStartOf="@+id/utf8Button"
            app:layout_constraintBottom_toTopOf="@+id/dataBox" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/utf8Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/utf8"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/choice_button_background_states"
            android:textColor="@color/black"
            app:selected="@{!vm.hexSelected}"
            android:onClick="@{ () -> vm.toggleHex(false) }"
            app:layout_constraintBaseline_toBaselineOf="@+id/dataLabel"
            app:layout_constraintStart_toEndOf="@+id/hexButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/dataBox" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/dataBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/hexButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/toggleNotifyButton"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="8dp"
            android:inputType="textNoSuggestions"
            android:gravity="start"
            android:text="@={ vm.data }"
            android:enabled="@{vm.dataEditable}"
            style="@style/input_box"
            tools:text="AABBCC"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/toggleNotifyButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/toggle_notify"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="5dp"
            android:onClick="@{ ()-> vm.toggleNotify() }"
            android:enabled="@{ vm.canToggleNotify }"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/readDataButton"
            app:layout_constraintTop_toBottomOf="@+id/dataBox"
            app:layout_constraintBottom_toTopOf="@+id/writeDataButton"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/readDataButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/read_data"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="20dp"
            android:onClick="@{ ()-> vm.readData() }"
            android:enabled="@{ vm.canReadData }"
            app:layout_constraintStart_toEndOf="@+id/toggleNotifyButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/toggleNotifyButton"
            app:layout_constraintBottom_toTopOf="@+id/wworButton"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/writeDataButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/write_data"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:onClick="@{ ()-> vm.writeData() }"
            android:enabled="@{ vm.canWriteData }"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/wworButton"
            app:layout_constraintTop_toBottomOf="@+id/toggleNotifyButton"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/wworButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/write_data_wwor"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:onClick="@{ ()-> vm.wworWriteData() }"
            android:enabled="@{ vm.canWWORWriteData }"
            app:layout_constraintStart_toEndOf="@+id/writeDataButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/readDataButton"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="#000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

