<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.silverpine.uu.sample.bluetooth.viewmodel.UUPeripheralViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:onClick="@{ vm.handleClick }"
        tools:background="@color/white">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/addressLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/address_label"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/addressValue"
            app:layout_constraintBottom_toTopOf="@+id/nameLabel" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/addressValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:text="@{ vm.macAddress }"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/addressLabel"
            app:layout_constraintStart_toEndOf="@+id/addressLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/nameValue"
            tools:text="00:00:00:00:00:00"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/nameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/name_label"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintTop_toBottomOf="@+id/addressLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/nameValue"
            app:layout_constraintBottom_toTopOf="@+id/connectionStateValue" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/nameValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:text="@{ vm.friendlyName }"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintTop_toBottomOf="@+id/addressValue"
            app:layout_constraintStart_toEndOf="@+id/nameLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/connectionStateValue"
            app:layout_constraintBaseline_toBaselineOf="@+id/nameLabel"
            tools:text="BLE Widget"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/connectionStateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/state_label"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintTop_toBottomOf="@+id/nameLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/connectionStateValue"
            app:layout_constraintBottom_toTopOf="@+id/rssiLabel" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/connectionStateValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:text="@{ vm.connectionState }"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintTop_toBottomOf="@+id/nameValue"
            app:layout_constraintStart_toEndOf="@+id/connectionStateLabel"
            app:layout_constraintBottom_toTopOf="@+id/rssiValue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/connectionStateLabel"
            tools:text="Disconnected"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/rssiLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/rssi_label"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintTop_toBottomOf="@+id/connectionStateLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/rssiValue"
            app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/rssiValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:text="@{ vm.rssi }"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintTop_toBottomOf="@+id/connectionStateValue"
            app:layout_constraintStart_toEndOf="@+id/rssiLabel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/rssiLabel"
            tools:text="-57"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

