<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.silverpine.uu.sample.bluetooth.viewmodel.ServiceViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:onClick="@{ vm.handleClick }"
        tools:background="@color/white">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/uuidLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/uuid_label"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/uuidValue"
            app:layout_constraintBottom_toTopOf="@+id/nameLabel" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/uuidValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:text="@{ vm.uuid }"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/uuidLabel"
            app:layout_constraintStart_toEndOf="@+id/uuidLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/nameValue"
            tools:text="0000-0000-0000-0000-0000"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/nameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/name_label"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintTop_toBottomOf="@+id/uuidLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/nameValue"
            app:layout_constraintBottom_toTopOf="@+id/typeValue" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/nameValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:text="@{ vm.name }"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintTop_toBottomOf="@+id/uuidValue"
            app:layout_constraintStart_toEndOf="@+id/nameLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/typeValue"
            app:layout_constraintBaseline_toBaselineOf="@+id/nameLabel"
            tools:text="-127"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/typeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/type_label"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintTop_toBottomOf="@+id/nameLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/typeValue"
            app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/typeValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:text="@{ vm.type }"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintTop_toBottomOf="@+id/nameValue"
            app:layout_constraintStart_toEndOf="@+id/typeLabel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/typeLabel"
            tools:text="00:00:00"/>

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="#000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

